# c-of-x

./: .gitignore  .travis-ci.yml  .travis.yml  CMakeLists.txt  README.md
Classes/: Addition.cpp  Addition.h  Application.cpp  Application.h  Assignment.cpp  Assignment.h  BaseType.cpp  BaseType.h  CalculationOperator.cpp  CalculationOperator.h  Closure.cpp  Closure.h  DataType.h  DebugHelpers.cpp  DebugHelpers.h  Environment.cpp  Environment.h  EnvironmentalVariable.cpp  EnvironmentalVariable.h  Error.cpp  Error.h  EvalDelay.cpp  EvalDelay.h  EvalForce.cpp  EvalForce.h  ExceptionParseError.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Identifier.cpp  Identifier.h  Include.cpp  Include.h  Integer.cpp  Integer.h  Intersection.cpp  Lambda.cpp  Lambda.h  List.cpp  (+50 more)
Classes/Language/: Addition.cpp  Addition.h  Any.cpp  Any.h  Application.cpp  Application.h  Assignment.cpp  Assignment.h  CalculationOperator.cpp  CalculationOperator.h  Closure.cpp  Closure.h  Conjunction.cpp  Conjunction.h  DataType.cpp  DataType.h  DebugHelpers.h  DebugPrinter.cpp  Environment.cpp  Environment.h  Equality.cpp  Equality.h  Error.h  EvalDelay.cpp  EvalDelay.h  EvalForce.cpp  EvalForce.h  ExceptionParseError.h  Expression.cpp  Expression.h  Function.cpp  Function.h  Identifier.cpp  Identifier.h  Include.cpp  Integer.cpp  Integer.h  IntegerType.cpp  IntegerType.h  Intersection.cpp  (+35 more)
Classes/Language/Expressions/: Addition.cpp  Any.h  Application.cpp  Application.h  CalculationOperator.cpp  Closure.cpp  DefaultOperator.h  Equality.cpp  Error.cpp  EvalForce.h  Function.cpp  Function.h  FunctionType.h  Identifier.cpp  Integer.cpp  Integer.h  IntegerType.h  Intersection.cpp  Lambda.cpp  Less.cpp  Less.h  Multiplication.cpp  Mutation.cpp  Operator.h  Pair.cpp  ParseError.h  Predicate.h  Print.cpp  Print.h  Quote.cpp  Quote.h  String.h  Then.cpp  Type.h  TypeError.cpp  Union.cpp  Void.h
Classes/Language/Parser/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
Classes/Language/System/: Environment.cpp  Environment.h
Classes/REPL/: AutoCompleter.cpp  REPL.cpp  REPL.h  main.cpp
Modules/docs/: docs.txt
Specification/: Lexical Structure.md
Tests/: CMakeLists.txt  LanguageTests.cpp  LexerTests.cpp  ParserTests.cpp  tests.cpp
doc/specification/: Lexical Structure.md
liblang/: CMakeLists.txt
liblang/include/Expressions/: Addition.h  Any.h  Application.h  CalculationOperator.h  Closure.h  Conjunction.h  Data.h  DataType.h  DefaultOperator.h  Equality.h  Error.h  EvalForce.h  Expression.h  Function.h  FunctionType.h  Identifier.h  Include.h  Integer.h  IntegerType.h  Intersection.h  Inverse.h  Iterable.h  Lambda.h  Less.h  Let.h  More.h  Morphism.h  Multiplication.h  Mutation.h  Not.h  Operation.h  Operator.h  Pair.h  ParseError.h  Predicate.h  Print.h  Quote.h  String.h  Subtraction.h  Then.h  (+6 more)
liblang/include/Parser/: Lexer.h  Parser.h  Token.h
liblang/include/System/: Cast.h  DebugPrinter.h  Environment.h  Object.h
liblang/src/: Not.cpp
liblang/src/Expressions/: Addition.cpp  Any.cpp  Application.cpp  CalculationOperator.cpp  Closure.cpp  Conjunction.cpp  Data.cpp  DataType.cpp  DefaultOperator.cpp  Equality.cpp  Error.cpp  EvalForce.cpp  Expression.cpp  Function.cpp  FunctionType.cpp  Identifier.cpp  Include.cpp  Integer.cpp  IntegerType.cpp  Intersection.cpp  Inverse.cpp  Iterable.cpp  Lambda.cpp  Less.cpp  Let.cpp  More.cpp  Morphism.cpp  Multiplication.cpp  Mutation.cpp  Not.cpp  Operation.cpp  Operator.cpp  Pair.cpp  ParseError.cpp  Predicate.cpp  Print.cpp  Quote.cpp  String.cpp  Subtraction.cpp  Then.cpp  (+6 more)
liblang/src/Parser/: Lexer.cpp  Parser.cpp  Token.cpp
liblang/src/System/: Cast.cpp  DebugPrinter.cpp  Environment.cpp  Object.cpp
liblang/test/: CMakeLists.txt  LanguageTests.cpp  LexerTests.cpp  ParserTests.cpp
repl/: CMakeLists.txt
repl/src/: AutoCompleter.cpp  AutoCompleter.h  Input.cpp  Input.h  REPL.cpp  REPL.h  main.cpp
src/: apply.cpp  apply.h  ast_builder.cpp  ast_builder.h  compiler.cpp  compiler.h  environment.h  equality.cpp  equality.h  eval.cpp  eval.h  functor.h  grammar.h  interpreter.cpp  interpreter.h  interpreter_test.cpp  interpreter_test.h  io.cpp  io.h  main.cpp  operations.cpp  operations.h  operations_for_datatypes.h  parser.cpp  parser.h  recursive_wrapper.h  substitution.cpp  substitution.h  types.h  unapply.cpp  unapply.h  util.h
stdlib/: CMakeLists.txt  prelude.lang
test/: disabled_tests.json  run_tests.py  tests.json
